fix: update scrollbar in sass/modules/_list.scss. converted to css.

--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -174,7 +174,7 @@
   grid-row: 3/span 9;
 }
 
-.list--large::-webkit-scrollbar {
+.list::-webkit-scrollbar {
   display: none;
 }
 
