--- a/sass/modules/_list.scss
+++ b/sass/modules/_list.scss
@@ -19,7 +19,7 @@
     grid-row: 3/ span 9;
 }
 
-.list--large::-webkit-scrollbar{
+.list::-webkit-scrollbar{
     display: none;
 }
 
